--- a/app/src/main/res/layout/stamp_button.xml
+++ b/app/src/main/res/layout/stamp_button.xml
@@ -5,7 +5,7 @@
     <!--android:layout_height="match_parent">-->
 
 
-<ImageButton android:id="@+id/gridImageView"
+<ImageView android:id="@+id/gridImageView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android" />
